[gd_scene load_steps=31 format=2]

[ext_resource path="res://pixel_sprites/tabuleiro3.png" type="Texture" id=1]
[ext_resource path="res://Dados.tscn" type="PackedScene" id=2]
[ext_resource path="res://Node2D.gd" type="Script" id=3]
[ext_resource path="res://Node2D2222.tscn" type="PackedScene" id=4]
[ext_resource path="res://cenas_dados/dado3.tscn" type="PackedScene" id=5]
[ext_resource path="res://cenas_dados/dado6.tscn" type="PackedScene" id=6]
[ext_resource path="res://cenas_dados/dado4.tscn" type="PackedScene" id=7]
[ext_resource path="res://cenas_dados/dado5.tscn" type="PackedScene" id=8]
[ext_resource path="res://pixel_sprites/dados_anim.png" type="Texture" id=9]
[ext_resource path="res://DadosAnim.gd" type="Script" id=10]
[ext_resource path="res://Game.gd" type="Script" id=11]
[ext_resource path="res://pixel_sprites/star_red.png" type="Texture" id=12]
[ext_resource path="res://pixel_sprites/star_green.png" type="Texture" id=13]
[ext_resource path="res://pixel_sprites/star_blue.png" type="Texture" id=14]
[ext_resource path="res://Jogadores.gd" type="Script" id=15]
[ext_resource path="res://tecla.tscn" type="PackedScene" id=16]
[ext_resource path="res://Fonte/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://Scripts/Calculadora.gd" type="Script" id=18]
[ext_resource path="res://numero1.gd" type="Script" id=19]
[ext_resource path="res://pixel_sprites/Barra do meio.png" type="Texture" id=20]
[ext_resource path="res://pixel_sprites/106-1064528_play-button-pixel-art-hd-png-download.png" type="Texture" id=21]
[ext_resource path="res://pixel_sprites/Base1.png" type="Texture" id=22]

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 17 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "barra"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=8]
resource_name = "barra"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("DadosAnim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "dados_rolando"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DadosAnim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="GDScript" id=3]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 2.0
margin_right = 4.0
margin_bottom = 2.0
texture = ExtResource( 1 )
expand = true

[node name="Jogadores" type="Node2D" parent="."]
script = ExtResource( 15 )

[node name="BarraDoMeio" type="Label" parent="Jogadores"]
margin_left = 58.0
margin_top = 1169.0
margin_right = 447.0
margin_bottom = 1273.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "oi"
align = 1
valign = 1

[node name="BarraDoMeio" type="Sprite" parent="Jogadores/BarraDoMeio"]
position = Vector2( 195, 52 )
scale = Vector2( 1.21154, 1.21154 )
texture = ExtResource( 20 )
vframes = 3
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Jogadores/BarraDoMeio/BarraDoMeio"]
autoplay = "barra"
anims/RESET = SubResource( 5 )
anims/barra = SubResource( 6 )

[node name="BarraDoMeio2" type="Label" parent="Jogadores"]
margin_left = 57.0
margin_top = 1297.0
margin_right = 446.0
margin_bottom = 1460.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1

[node name="BarraDoMeio" type="Sprite" parent="Jogadores/BarraDoMeio2"]
position = Vector2( 196.178, 84.5001 )
scale = Vector2( 1.21759, 1.83654 )
texture = ExtResource( 20 )
vframes = 3
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Jogadores/BarraDoMeio2/BarraDoMeio"]
autoplay = "barra"
anims/RESET = SubResource( 7 )
anims/barra = SubResource( 8 )

[node name="StarRed" type="Sprite" parent="Jogadores"]
position = Vector2( 283, 1109 )
scale = Vector2( 1.65625, 1.65625 )
texture = ExtResource( 12 )

[node name="Base" type="Position2D" parent="Jogadores/StarRed"]

[node name="Casa1Red" type="Position2D" parent="Jogadores/StarRed"]
position = Vector2( 0, -40 )

[node name="StarGreen" type="Sprite" parent="Jogadores"]
position = Vector2( 648, 1115 )
scale = Vector2( 1.652, 1.652 )
texture = ExtResource( 13 )

[node name="Base" type="Position2D" parent="Jogadores/StarGreen"]

[node name="Casa1Green" type="Position2D" parent="Jogadores/StarGreen"]
position = Vector2( 0, -40 )

[node name="StarBlue" type="Sprite" parent="Jogadores"]
position = Vector2( 957, 1104 )
scale = Vector2( 1.65625, 1.65625 )
texture = ExtResource( 14 )

[node name="Base" type="Position2D" parent="Jogadores/StarBlue"]

[node name="Casa1Blue" type="Position2D" parent="Jogadores/StarBlue"]
position = Vector2( 0, -41.0566 )

[node name="Game" type="Node2D" parent="Jogadores"]
script = ExtResource( 11 )

[node name="dados" type="Node2D" parent="Jogadores/Game"]
script = ExtResource( 3 )

[node name="posicao3" type="Position2D" parent="Jogadores/Game/dados"]
position = Vector2( 903, 1377 )

[node name="posicao2" type="Position2D" parent="Jogadores/Game/dados"]
position = Vector2( 894, 1836 )

[node name="Posicao1" type="Position2D" parent="Jogadores/Game/dados"]
position = Vector2( 899, 1616 )

[node name="dado1" parent="Jogadores/Game/dados" instance=ExtResource( 2 )]
visible = false
position = Vector2( 308, 1389 )
scale = Vector2( 0.5, 0.5 )

[node name="Node2D2" parent="Jogadores/Game/dados" instance=ExtResource( 4 )]
visible = false
position = Vector2( 711, 1384 )
scale = Vector2( 0.5, 0.5 )

[node name="dado3_cena" parent="Jogadores/Game/dados" instance=ExtResource( 5 )]
visible = false
scale = Vector2( 0.5, 0.5 )

[node name="dado4" parent="Jogadores/Game/dados" instance=ExtResource( 7 )]
visible = false
scale = Vector2( 0.5, 0.5 )

[node name="dado5" parent="Jogadores/Game/dados" instance=ExtResource( 8 )]
visible = false
scale = Vector2( 0.5, 0.5 )

[node name="dado6" parent="Jogadores/Game/dados" instance=ExtResource( 6 )]
visible = false
scale = Vector2( 0.5, 0.5 )

[node name="Calculadora" type="Control" parent="Jogadores/Game/dados"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 18 )

[node name="Resultado" type="Label" parent="Jogadores/Game/dados/Calculadora"]
margin_left = 43.0
margin_top = 1473.0
margin_right = 432.0
margin_bottom = 1577.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
align = 2
valign = 2

[node name="Subtração" parent="Jogadores/Game/dados/Calculadora" instance=ExtResource( 16 )]
margin_left = 336.0
margin_top = 1685.0
margin_right = 436.0
margin_bottom = 1785.0
text = "-"

[node name="Número3" parent="Jogadores/Game/dados/Calculadora" instance=ExtResource( 16 )]
margin_left = 236.0
margin_top = 1685.0
margin_right = 336.0
margin_bottom = 1785.0

[node name="Número2" parent="Jogadores/Game/dados/Calculadora" instance=ExtResource( 16 )]
margin_left = 136.0
margin_top = 1685.0
margin_right = 236.0
margin_bottom = 1785.0

[node name="Mais" parent="Jogadores/Game/dados/Calculadora" instance=ExtResource( 16 )]
margin_left = 336.0
margin_top = 1585.0
margin_right = 436.0
margin_bottom = 1685.0
text = "+"

[node name="Divisão" parent="Jogadores/Game/dados/Calculadora" instance=ExtResource( 16 )]
margin_left = 236.0
margin_top = 1585.0
margin_right = 336.0
margin_bottom = 1685.0
text = "/"

[node name="Multiplicação" parent="Jogadores/Game/dados/Calculadora" instance=ExtResource( 16 )]
margin_left = 136.0
margin_top = 1585.0
margin_right = 236.0
margin_bottom = 1685.0
text = "X"

[node name="Apagar" parent="Jogadores/Game/dados/Calculadora" instance=ExtResource( 16 )]
margin_left = 36.0
margin_top = 1585.0
margin_right = 136.0
margin_bottom = 1685.0
text = "C"

[node name="Igual" parent="Jogadores/Game/dados/Calculadora" instance=ExtResource( 16 )]
margin_left = 36.0
margin_top = 1785.0
margin_right = 436.0
margin_bottom = 1885.0
text = "="

[node name="Número1" parent="Jogadores/Game/dados/Calculadora" instance=ExtResource( 16 )]
margin_left = 36.0
margin_top = 1685.0
margin_right = 136.0
margin_bottom = 1785.0
script = ExtResource( 19 )

[node name="DadosAnim" type="Sprite" parent="Jogadores/Game/dados"]
position = Vector2( 794, 1207 )
scale = Vector2( 1.12396, 1.12396 )
texture = ExtResource( 9 )
hframes = 3
vframes = 2
frame = 1
script = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Jogadores/Game/dados/DadosAnim"]
root_node = NodePath("../..")
playback_speed = 3.5
anims/RESET = SubResource( 1 )
anims/dados_rolando = SubResource( 2 )
script = SubResource( 3 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="Jogadores"]
position = Vector2( 447, 1782 )
scale = Vector2( 0.199226, 0.199226 )
normal = ExtResource( 21 )
action = "ui_down"

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 571, 1428 )
scale = Vector2( 4.71875, 4.71875 )
normal = ExtResource( 22 )
action = "ui_home"

[connection signal="pressed" from="Jogadores/Game/dados/Calculadora/Subtração" to="Jogadores/Game/dados/Calculadora" method="_on_Subtrao_pressed"]
[connection signal="pressed" from="Jogadores/Game/dados/Calculadora/Número3" to="Jogadores/Game/dados/Calculadora" method="_on_Nmero3_pressed"]
[connection signal="pressed" from="Jogadores/Game/dados/Calculadora/Número2" to="Jogadores/Game/dados/Calculadora" method="_on_Nmero2_pressed"]
[connection signal="pressed" from="Jogadores/Game/dados/Calculadora/Mais" to="Jogadores/Game/dados/Calculadora" method="_on_Mais_pressed"]
[connection signal="pressed" from="Jogadores/Game/dados/Calculadora/Divisão" to="Jogadores/Game/dados/Calculadora" method="_on_Diviso_pressed"]
[connection signal="pressed" from="Jogadores/Game/dados/Calculadora/Multiplicação" to="Jogadores/Game/dados/Calculadora" method="_on_Multiplicao_pressed"]
[connection signal="pressed" from="Jogadores/Game/dados/Calculadora/Apagar" to="Jogadores/Game/dados/Calculadora" method="_on_Apagar_pressed"]
[connection signal="pressed" from="Jogadores/Game/dados/Calculadora/Igual" to="Jogadores/Game/dados/Calculadora" method="_on_Igual_pressed"]
[connection signal="pressed" from="Jogadores/Game/dados/Calculadora/Número1" to="Jogadores/Game/dados/Calculadora" method="_on_Nmero1_pressed"]
